--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/platform-fastify": "^8.1.2",
     "@nestjs/schedule": "^1.0.1",
     "@nestjs/sequelize": "^8.0.0",
+    "@nestjs/swagger": "^5.1.4",
     "@nestjs/throttler": "^2.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "apollo-server-express": "^3.4.0",
@@ -47,6 +48,7 @@
     "csurf": "^1.11.0",
     "fastify-csrf": "^3.1.0",
     "fastify-helmet": "^5.3.2",
+    "fastify-swagger": "^4.12.6",
     "graphql": "^15.7.1",
     "helmet": "^4.6.0",
     "mysql2": "^2.3.2",
@@ -58,6 +60,7 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.8.0",
     "sequelize-typescript": "^2.1.1",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.38"
   },
   "devDependencies": {
