--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/swagger": "^5.1.4",
     "@nestjs/throttler": "^2.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@prisma/client": "^3.3.0",
     "apollo-server-express": "^3.4.0",
     "bcrypt": "^5.0.1",
     "bull": "^4.0.0",
@@ -51,6 +52,7 @@
     "fastify-swagger": "^4.12.6",
     "graphql": "^15.7.1",
     "helmet": "^4.6.0",
+    "joi": "^17.4.2",
     "mysql2": "^2.3.2",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
@@ -85,6 +87,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "prisma": "^3.3.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
