--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nestjs",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "NestJS starter kit",
+  "author": "Ngoc Do",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
