--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/event-emitter": "^1.0.0",
     "@nestjs/graphql": "^9.1.1",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/microservices": "^8.1.2",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
@@ -55,6 +56,7 @@
     "joi": "^17.4.2",
     "mysql2": "^2.3.2",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
@@ -77,6 +79,7 @@
     "@types/jest": "^27.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.11",
